--- a/src/containers/CircleCI/css/Details.css
+++ b/src/containers/CircleCI/css/Details.css
@@ -1,16 +1,8 @@
 .details-container {
-  position: fixed;
-  top: 35%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  
+  margin: auto;
+  margin-top: 100px;
+  width: 400px;
   font-size: 20px;
-  padding: 5px;
-  width: 500px;
 }
 
 .details_container__header {
