--- a/src/components/FormComponent/FormComponent.css
+++ b/src/components/FormComponent/FormComponent.css
@@ -37,17 +37,15 @@
   font: 14px Arial, Helvetica, sans-serif;
   margin-bottom: 15px;
   width: 200px;
-
 }
 
-.form-style input[type="checkbox"]:focus {
+.form-input-style:focus {
   box-shadow: 0 0 5px #43D1AF;
   padding: 5px;
   border: 1px solid #43D1AF;
 }
 
-.form-style input[type="submit"],
-.form-style input[type="button"] {
+.form-submit-style {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -61,7 +59,6 @@
   color: #fff;
 }
 
-.form-style input[type="submit"]:hover,
-.form-style input[type="button"]:hover{
+.form-submit-style:hover {
   background: #2EBC99;
 }
