--- a/src/components/NotesComponent/NotesComponent.css
+++ b/src/components/NotesComponent/NotesComponent.css
@@ -31,6 +31,10 @@
   cursor: pointer;
 }
 
+.notes-action-button:disabled{
+  background-color: gray;
+}
+
 .notes-add-button {
   color: #06a53e;
   border: 2px solid #06a53e;
@@ -72,9 +76,9 @@
   outline: none;
   box-sizing: border-box;
   -webkit-transition: all 0.30s ease-in-out;
- -moz-transition: all 0.30s ease-in-out;
- -ms-transition: all 0.30s ease-in-out;
- -o-transition: all 0.30s ease-in-out;
+  -moz-transition: all 0.30s ease-in-out;
+  -ms-transition: all 0.30s ease-in-out;
+  -o-transition: all 0.30s ease-in-out;
 }
 
 .title-field:focus {
@@ -118,4 +122,21 @@
 
 .note-submit:hover {
   background-color: lightblue;
+}
+
+.note-document {
+  text-align: center;
+  width: 200px;
+  height: 100px;
+  box-shadow: 0px 2px 5px 0px #888888;
+  background-color: white;
+  cursor: pointer;
+}
+
+.note-document:hover {
+  background-color: lightgray;
+}
+
+.note-document-active {
+  background-color: #F1684E;
 }
