--- a/src/components/NotesComponent/NotesComponent.css
+++ b/src/components/NotesComponent/NotesComponent.css
@@ -8,15 +8,17 @@
 }
 
 .notes-search {
+  width: 250px;
   height: 30px;
   border-radius: 5px;
   font-size: 15px;
+  box-shadow: 0px 2px 5px 0px #888888;
 }
 
 .notes-buttons-container {
   display: flex;
   align-items: center;
-  width: 180px;
+  width: 250px;
   justify-content: flex-end;
 }
 
@@ -126,7 +128,7 @@
 
 .note-document {
   text-align: center;
-  width: 200px;
+  width: 250px;
   height: 100px;
   box-shadow: 0px 2px 5px 0px #888888;
   background-color: white;
@@ -139,4 +141,14 @@
 
 .note-document-active {
   background-color: #F1684E;
+}
+
+.title {
+  margin-left: 250px;
+  color: #4CAF50;
+}
+
+.note-desc {
+  margin-left: 200px;
+  margin-top: 200px;
 }
